objects/EUR_CRM_Evaluation_Criteria_Thresholds__c.object
<CustomObject>
    <description>PREU Data Model - Object created for PR NL Project, to handle the Dealcalculator thresholds.</description>
    <fields>
        <fullName>EUR_CRM_Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equal (=)</fullName>
                </value>
                <value>
                    <fullName>Not Equal (=!)</fullName>
                </value>
                <value>
                    <fullName>Less Than (&lt;)</fullName>
                </value>
                <value>
                    <fullName>Greater Than (&gt;)</fullName>
                </value>
                <value>
                    <fullName>Less Than or Equal (&lt;=)</fullName>
                </value>
                <value>
                    <fullName>Greater Than or Equal (&gt;=)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Evaluation_Criteria__c</fullName>
        <label>Evaluation Criteria</label>
        <referenceTo>EUR_CRM_Evaluation_Criteria__c</referenceTo>
        <relationshipLabel>Evaluation Criteria Thresholds (EU)</relationshipLabel>
        <relationshipName>Evaluation_Criteria_Thresholds_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Max_Conditional_Rebate__c</fullName>
        <label>Max Conditional Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Max_Performance_Rebate__c</fullName>
        <label>Max Performance Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Threshold_Criteria__c</fullName>
        <label>Threshold Criteria</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Evaluation Criteria Thresholds (EU)</label>
    <listViews>
        <fullName>NL</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Max_Conditional_Rebate__c</columns>
        <columns>EUR_CRM_Max_Performance_Rebate__c</columns>
        <columns>EUR_CRM_Threshold_Criteria__c</columns>
        <columns>EUR_CRM_Condition__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Evaluation_Criteria_Thresholds__c.EUR_NL_Evaluation_Criteria_Threshold</value>
        </filters>
        <label>NL</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ECT-{0000000000}</displayFormat>
        <label>Evaluation Criteria Thresholds ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluation Criteria Thresholds (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_NL_Evaluation_Criteria_Threshold</fullName>
        <active>true</active>
        <label>EUR NL Evaluation Criteria Threshold</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>